unpackaged/objects/JogadorMesa__c.object
<CustomObject>
    <fields>
        <fullName>DataAtivacao__c</fullName>
        <label>Data Ativação</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataDesativacao__c</fullName>
        <label>Data Desativaçao</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Jogador__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Jogador</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Jogador</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jogadores Mesa</relationshipLabel>
        <relationshipName>Jogadores_Mesa</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mesa__c</fullName>
        <label>Mesa</label>
        <referenceTo>Mesa__c</referenceTo>
        <relationshipLabel>Jogadores Mesa</relationshipLabel>
        <relationshipName>Jogadores_Mesa</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Observacao__c</fullName>
        <label>Observação</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SessaoJogador__c</fullName>
        <label>Sessão Jogador</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SessaoCash__c.Status__c</field>
                <operation>equals</operation>
                <value>Aberta</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SessaoCash__c</referenceTo>
        <relationshipLabel>Jogadores Mesas</relationshipLabel>
        <relationshipName>Jogadores_Mesas</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ativo</fullName>
                </value>
                <value>
                    <fullName>Desativo</fullName>
                </value>
                <value>
                    <fullName>Em Espera</fullName>
                    <default>true</default>
                    <label>Em Espera</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UsuarioDesativacao__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Referência ao usuário que efetuou a desativação do jogador da mesa</description>
        <inlineHelpText>Referência ao usuário que efetuou a desativação do jogador da mesa</inlineHelpText>
        <label>Usuário Desativação</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Jogadores_Mesas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Jogador Mesa</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Jogador__c</columns>
        <columns>Mesa__c</columns>
        <columns>Status__c</columns>
        <columns>DataAtivacao__c</columns>
        <columns>DataDesativacao__c</columns>
        <columns>Observacao__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <listViews>
        <fullName>Todos_Ativos</fullName>
        <columns>NAME</columns>
        <columns>Jogador__c</columns>
        <columns>Mesa__c</columns>
        <columns>Status__c</columns>
        <columns>DataAtivacao__c</columns>
        <columns>SessaoJogador__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ativo</value>
        </filters>
        <label>Todos Ativos</label>
    </listViews>
    <nameField>
        <displayFormat>JM-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jogadores Mesas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>